Revert "AstNode and Assembler objects implemented in vala"
This reverts commit e9af58204c20b1e5b48d721366320358574564ef.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,7 +83,7 @@ EXTRA_DIST+=\
 libabaco_la_SOURCES=\
 	assembler.c \
 	astate.c \
-	ast.vala \
+	ast.c \
 	libabaco.c \
 	parser.vala \
 	rules.vala \
