--- a/src/gmp/Makefile.am
+++ b/src/gmp/Makefile.am
@@ -15,6 +15,49 @@
 # along with libabaco. If not, see <http://www.gnu.org/licenses/>.
 #
 
-SUBDIRS=\
-	abaco \
-	gmp
+#
+# Some variables
+#
+
+EXTRA_DIST=
+CLEANFILES=
+VOID=
+
+#
+# Binaries and libraries
+# - declare
+#
+
+pkglib_LTLIBRARIES=\
+	libabaco_gmp.la \
+	$(VOID)
+
+pkginclude_HEADERS=\
+	libabaco_gmp.h \
+	$(VOID)
+
+#
+# Binaries and libraries
+# - sources
+#
+
+libabaco_gmp_la_SOURCES=\
+	$(VOID)
+libabaco_gmp_la_CFLAGS=\
+	$(ABACO_CFLAGS) \
+	$(ABACO_AST_CFLAGS) \
+	$(GLIB_CFLAGS) \
+	$(GOBJECT_CFLAGS) \
+	-DG_LOG_DOMAIN=\"AbacoGMP\" \
+	-D__LIBABACO_GMP_INSIDE__=1 \
+	$(VOID)
+libabaco_gmp_la_LIBADD=\
+	$(ABACO_LIBS) \
+	$(ABACO_AST_LIBS) \
+	$(GLIB_LIBS) \
+	$(GOBJECT_LIBS) \
+	$(VOID)
+libabaco_gmp_la_LDFLAGS=\
+	-rpath ${pkglibdir} \
+	-version-info 0:0:0 \
+	$(VOID)
