--- a/src/gmp/.gitignore
+++ b/src/gmp/.gitignore
@@ -15,6 +15,18 @@
 # along with libabaco. If not, see <http://www.gnu.org/licenses/>.
 #
 
-SUBDIRS=\
-	abaco \
-	gmp
+*.[ao]
+*.la
+*.lai
+*.lo
+*.Po
+*.Plo
+*.Tpo
+
+*.gir
+*.typelib
+.dirstamp
+
+libabaco*.so*
+libabaco*.dll*
+libabaco*.dylib*
