AbacoJIT Just in Time compiler

--- a/configure.ac
+++ b/configure.ac
@@ -157,6 +157,8 @@ fi
 
 AC_SUBST([ABACO_CFLAGS], [-I\${top_builddir}/src/abaco/])
 AC_SUBST([ABACO_LIBS], [\${top_builddir}/src/abaco/libabaco.la])
+AC_SUBST([ABACO_JIT_CFLAGS], [-I\${top_builddir}/src/jit/])
+AC_SUBST([ABACO_JIT_LIBS], [\${top_builddir}/src/jit/libabaco_jit.la])
 AC_SUBST([ABACO_MP_CFLAGS], [-I\${top_builddir}/src/mp/])
 AC_SUBST([ABACO_MP_LIBS], [\${top_builddir}/src/mp/libabaco_mp.la])
 
@@ -207,6 +209,7 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
 src/Makefile
 src/abaco/Makefile
+src/jit/Makefile
 src/mp/Makefile
 src/mp/closure/Makefile
 test/Makefile
