--- a/configure.ac
+++ b/configure.ac
@@ -155,10 +155,15 @@ else
   AC_SUBST([DYNASM], [\${LUA}\ \${top_builddir}/build/dynasm/dynasm.lua])
 fi
 
+AC_SUBST([DYNASM_CFLAGS], [-I\${top_builddir}/build/dynasm/])
+AC_SUBST([DYNASM_LIBS], [-I\${top_builddir}/build/dynasm/])
+
 AC_SUBST([ABACO_CFLAGS], [-I\${top_builddir}/src/abaco/])
 AC_SUBST([ABACO_LIBS], [\${top_builddir}/src/abaco/libabaco.la])
 AC_SUBST([ABACO_JIT_CFLAGS], [-I\${top_builddir}/src/jit/])
 AC_SUBST([ABACO_JIT_LIBS], [\${top_builddir}/src/jit/libabaco_jit.la])
+AC_SUBST([ABACO_JITS_CFLAGS], [-I\${top_builddir}/src/jits/])
+AC_SUBST([ABACO_JITS_LIBS], [\${top_builddir}/src/jits/libabaco_jits.la])
 AC_SUBST([ABACO_MP_CFLAGS], [-I\${top_builddir}/src/mp/])
 AC_SUBST([ABACO_MP_LIBS], [\${top_builddir}/src/mp/libabaco_mp.la])
 
@@ -210,6 +215,7 @@ AC_CONFIG_FILES([
 src/Makefile
 src/abaco/Makefile
 src/jit/Makefile
+src/jits/Makefile
 src/mp/Makefile
 src/mp/closure/Makefile
 test/Makefile
