--- a/src/mp/Makefile.am
+++ b/src/mp/Makefile.am
@@ -63,6 +63,7 @@ libabaco_mp_la_SOURCES=\
 	$(VOID)
 libabaco_mp_la_CFLAGS=\
 	$(ABACO_CFLAGS) \
+	$(ABACO_UCL_CFLAGS) \
 	$(GLIB_CFLAGS) \
 	$(GMP_CFLAGS) \
 	$(GOBJECT_CFLAGS) \
@@ -73,6 +74,7 @@ libabaco_mp_la_CFLAGS=\
 	$(VOID)
 libabaco_mp_la_LIBADD=\
 	$(ABACO_LIBS) \
+	$(ABACO_UCL_LIBS) \
 	$(GLIB_LIBS) \
 	$(GMP_LIBS) \
 	$(GOBJECT_LIBS) \
