--- a/src/jit/libabaco_jit.pc.in
+++ b/src/jit/libabaco_jit.pc.in
@@ -24,7 +24,7 @@ pkglibdir=${libdir}/@PACKAGE@
 version=@PACKAGE_VERSION_MAJOR@.@PACKAGE_VERSION_MINOR@.@PACKAGE_VERSION_MICRO@
 
 Name: @PACKAGE_NAME@
-Description: Multi-precision mathematics library (abstract JIT)
+Description: libAbaco abstract JIT class (without actual arch-specific JITs)
 Requires: glib-2.0 >= 2.64, gobject-2.0 >= 2.64, gio-2.0 >= 2.64, libabaco = ${version}
 Version: ${version}
 
