--- a/src/mp/libabaco_mp.pc.in
+++ b/src/mp/libabaco_mp.pc.in
@@ -24,7 +24,7 @@ pkglibdir=${libdir}/@PACKAGE@
 version=@PACKAGE_VERSION_MAJOR@.@PACKAGE_VERSION_MINOR@.@PACKAGE_VERSION_MICRO@
 
 Name: @PACKAGE_NAME@
-Description: Multi-precision mathematics library (Multi-precision interpreter)
+Description: libAbaco default virtual machine (uses GMP and MPFR for multi-precision mathematics)
 Requires: glib-2.0 >= 2.64, gobject-2.0 >= 2.64, gio-2.0 >= 2.64, libabaco = ${version}, libabaco_ucl = ${version}
 Version: ${version}
 
